# recsync

./: .gitignore  .gitmodules  .pre-commit-config.yaml  COPYRIGHT  LICENSE  README.md  test-client.py
.github/workflows/: ci-scripts-build.yml  docker.yml  pre-commit.yml  server.yml
client/: .dockerignore  .gitignore  .travis.yml  Dockerfile  Makefile  README.md  docker-compose.yml  example-compose.yml  ioc-compose.yml
client/.ci/: travis-build.sh  travis-prepare.sh
client/castApp/Db/: Makefile  reccaster.db
client/castApp/src/: Makefile  castMain.cpp  caster.c  caster.h  castinit.c  casttcp.c  castudp.c  dbcb.c  reccaster.dbd  sockhelpers.c  sockhelpers.h  testAddEnvVars.c  testAddExcludePattern.c  testsock.c  testtcp.c  testudp.c
client/configure/: CONFIG_SITE  RELEASE
client/demoApp/Db/: Makefile  archive.db  archive_bugtest.db  somerecords.db
client/demoApp/src/: Makefile  demoMain.cpp
client/docker/: RELEASE.local
client/iocBoot/: Makefile
client/iocBoot/iocdemo/: Makefile  st.cmd  st_bugtest.cmd  st_test.cmd
debian/: README  changelog  control  copyright  recceiver.init  recceiver.install  recceiver.postinst  recceiver.postrm  rules
server/: .dockerignore  .gitignore  Dockerfile  README  README.md  cf.conf  cf1.conf  cf2.conf  compose.yml  demo.conf  docker-compose.yml  pyproject.toml  recceiver.sqlite3  recceiver_full.conf  requirements-ci-py39.txt  requirements.txt  setup.py  test-compose.yml  test-remove-compose.yml  test.py
server/docker/: cf-compose.yml  test-bash-ioc.yml  test-multi-recc.yml  test-remove-infotag.yml  test-single-ioc.yml
server/docker/config/: cf.conf  cf1.conf  cf2.conf
server/recceiver/: announce.py  announcer.py  application.py  cfstore.py  dbstore.py  interfaces.py  metrics.py  mock_client.py  processors.py  recast.py  test_cfstore.py  udpbcast.py
server/recceiver/cf/: __init__.py  adapter.py  config.py  model.py  processor.py
server/recceiver/protocol/: __init__.py  announce.py  messages.py
server/recceiver/scripts/: add_extra_properties.py  print_cf_data.py  readme  test_mock_iocs.py
server/recceiver2/: app.py  conf.py  proto.py
server/tests/: __init__.py  client_checks.py  docker.py  docker_utils.py  test_bash_ioc.py  test_cfstore.py  test_config.py  test_container_smoke.py  test_e2e.py  test_multiple_recceiver.py  test_protocol.py  test_recast.py  test_remove_property.py  test_restart.py  test_single_ioc.py
server/tests/container/: test_container_smoke.py
server/tests/docker/: test-bash-ioc.yml  test-multi-recc.yml  test-single-ioc.yml
server/tests/docker/config/: cf2.conf
server/tests/integration/: docker_compose.py  test_bash_ioc.py  test_multiple_recceiver.py  test_single_ioc.py
server/tests/integration/resources/docker-compose/: test-bash-ioc.yml  test-multi-recc.yml  test-single-ioc.yml
server/tests/integration/resources/ioc/: test.db
server/tests/ioc/: archive.db  archive_bugtest.db  st.cmd  st_bugtest.cmd  test_remove_alias_after.db  test_remove_channel_before.db  test_remove_infotag.db  test_remove_infotag_after.db  test_remove_infotag_before.db
server/tests/unit/: test_application.py  test_cfstore.py  test_metrics.py  test_processors.py  test_recast.py
server/tests/unit/cf/: conftest.py  mock_adapter.py  test_cfstore.py  test_config.py  test_model.py  test_processor.py
server/twisted/plugins/: recceiver_plugin.py
