[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools" ]

[project]
name = "recceiver"
version = "1.5"
description = "resync server"
readme = "README.md"
authors = [
  { name = "Michael Davidsaver", email = "mdavidsaver@gmail.com" },
]
requires-python = ">=3.6"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "channelfinder @ https://github.com/ChannelFinder/pyCFClient/archive/refs/tags/v3.0.0.zip",
  "dataclasses; python_version<'3.7'",
  "requests",
  "twisted",
]

optional-dependencies.test = [
  "docker",
  "pytest",
  "testcontainers>=4",
  "zope-interface",
]
urls.Repository = "https://github.com/mdavidsaver/recsync"

[tool.setuptools]
packages = [ "recceiver", "twisted.plugins" ]
include-package-data = true

[tool.setuptools.package-data]
twisted = [ "plugins/recceiver_plugin.py" ]

[tool.ruff]
target-version = "py39"

line-length = 120
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
lint.select = [ "ALL" ]
lint.ignore = [
  "D",    # TODO fix docstrings later
  "E501", # line too long, handled by line-length
  "N",    # twisted doesn't follow naming conventions, so ignore all naming rules
]

lint.per-file-ignores."tests/*" = [ "S101" ]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"

[tool.mypy]
python_version = "3.9"
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
  "twisted.*",
  "twisted",
  "zope.*",
  "zope",
  "channelfinder.*",
  "channelfinder",
  "testcontainers.*",
  "testcontainers",
  "docker.*",
  "docker",
  "pytest.*",
  "pytest",
]
ignore_missing_imports = true
