[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools" ]

[project]
name = "recceiver"
version = "1.8dev"
description = "recCeiver is a server component of the recsync protocol. It receives record updates from recsync clients (e.g., recCasters) and forwards them to a configurable backend such as ChannelFinder."
readme = "README.md"
authors = [
  { name = "Michael Davidsaver", email = "mdavidsaver@gmail.com" },
]
requires-python = ">=3.6"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "channelfinder @ https://github.com/ChannelFinder/pyCFClient/archive/refs/tags/v3.0.0.zip",
  "dataclasses; python_version<'3.7'",
  "requests",
  "twisted",
]

optional-dependencies.test = [ "pytest", "testcontainers>=4" ]
urls.Repository = "https://github.com/ChannelFinder/recsync"

[tool.setuptools]
packages = [ "recceiver", "twisted.plugins" ]
include-package-data = true

[tool.setuptools.package-data]
twisted = [ "plugins/recceiver_plugin.py" ]

[tool.ruff]
target-version = "py39"

line-length = 120
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
lint.select = [ "E", "F", "I" ]
