[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools" ]

[project]
name = "recceiver"
version = "1.9.5"
description = """\
  recCeiver is a server component of the recsync protocol. It receives record updates from recsync clients (e.g., \
  recCasters) and forwards them to a configurable backend such as ChannelFinder.\
  """
readme = "README.md"
authors = [
  { name = "Michael Davidsaver", email = "mdavidsaver@gmail.com" },
]
requires-python = ">=3.6"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "channelfinder @ https://github.com/ChannelFinder/pyCFClient/archive/refs/tags/v3.2.0.zip",
  "dataclasses; python_version<'3.7'",
  "requests>=2.27.1,<2.28; python_version<'3.7'",
  "requests>=2.31,<2.32; python_version<'3.8'",
  "requests>=2.32.3,<2.33; python_version>='3.8'",
  "twisted>=21.7,<22; python_version<'3.7'",
  "twisted>=22.10,<23; python_version<'3.8'",
  "twisted>=24.11,<24.12; python_version>='3.8'",
]
optional-dependencies.test = [ "pytest>=8.3,<8.4", "pytest-cov>=6,<7", "testcontainers>=4.8.2,<4.9" ]
urls.Repository = "https://github.com/ChannelFinder/recsync"

[tool.setuptools]
packages = [ "recceiver", "recceiver.cf", "recceiver.protocol", "twisted.plugins" ]
include-package-data = true
package-data.twisted = [ "plugins/recceiver_plugin.py" ]

[tool.ruff]
target-version = "py39"
line-length = 120
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
lint.select = [ "E", "F", "I" ]

[tool.pytest]
ini_options.log_level = "DEBUG"
ini_options.filterwarnings = [
  "ignore::DeprecationWarning:testcontainers",
]
